changing the syntax of the image background

--- a/app/assets/stylesheets/draws.scss
+++ b/app/assets/stylesheets/draws.scss
@@ -17,7 +17,7 @@
     }
 
 .app-body {
-    background: url("back3.png");
+    background: image-url("back3.png");
     color: #333;
     margin: 33px;
     font-family: verdana, arial, helvetica, sans-serif;
