--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,22 +1,14 @@
-<h1> Home page </h1> 
+<h1> Mandala Art </h1> 
 
-<p> Mandala Art is a comunty for mandala artists </p> 
-
- <%
+<%
 =begin%>
- <video src="mandala1.mp4"  width="480" controls>
- </video>  
+ <p> Mandala Art is a comunty for mandala artists </p>  
 <%
 =end%>
 
- 
- <video controls width="720">
-  <source src="video/mandala1.mp4" type="video/mp4">
-<div style="border: 1px solid black ; padding: 8px ;">
-Sorry, your browser does not support the &lt;video&gt; tag used in this demo.
-</div>
-</video> 
+<center>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/vGNTRUXiqa0" frameborder="0" 
+allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
+</center>
+<p class="new-draw"> <%= link_to 'Go To Draws', draws_path %> </p> 
 
-
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/vGNTRUXiqa0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
