--- a/app/views/draws/index.html.erb
+++ b/app/views/draws/index.html.erb
@@ -2,10 +2,17 @@
 <html>
   <head>
     <title>MandelaArt</title>
+   
     </head> 
 
+
  <body >
-<h1>Draws</h1> 
+<%
+=begin%>
+ <h1>Draws</h1>   
+<%
+=end%>
+
 
 <table> 
   
@@ -15,24 +22,29 @@
   <td>
 
  <div class="card" style="width: 18rem;"> 
-  <% if draw.image.attached? %>
+  <% if draw.image.attached? %> 
     <img src="<%=(url_for(draw.image))%>" class="card-img-top" alt="...">
   <% end %> 
+
   <div class="card-body"> 
+
+  <input id="toggle-heart" type="checkbox" />
+  <label for="toggle-heart">❤</label>
+
     <h5 class="card-title">Tools</h5> 
     <p class="card-text"><%= draw.tools %></p>
-    <h5 class="card-title">Description</h5>
+    <h5 class="card-title">Description</h5> 
     <p class="card-text"><%= draw.description %></p>
-    <%= link_to 'Show', draw %>
-    <%= link_to 'Edit', edit_draw_path(draw) %>
-    <%= link_to 'Destroy', draw, method: :delete, data: { confirm: 'Are you sure?' } %>
-  </div>
+    <%= link_to 'Show', draw, class:"gray-color"%> | 
+    <%= link_to 'Edit', edit_draw_path(draw), class:"gray-color" %> |
+    <%= link_to 'Delete', draw, method: :delete, data: { confirm: 'Are you sure?' }, class:"gray-color" %>
+  </div> 
 </div>  
-    <% end %> 
+    <% end %>  
     </td> 
   </tr> 
-  </tbody>
-  <p class="new-draw"> <%= link_to 'New Draw', new_draw_path %> </p>
+  </tbody> 
+  <p class="new-draw"> <%= link_to 'Add New Draw', new_draw_path, class:"gray-color"%> </p>
 </table>
  
 </body>
