--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,5 +10,6 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/vGNTRUXiqa0" frameborder="0" 
 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
 </center>
-<p class="new-draw"> <%= link_to 'Go To Draws', draws_path %> </p> 
+<p class="new-draw"> <%= link_to 'Go To Draws', draws_path, class:"gray-color" %> </p>  
+
 
