--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,20 +17,17 @@
   <div id="content-wrap"> 
 <header class="head"> 
    <% if artist_signed_in?%> 
-     <h2> Welcome <%= current_artist.first_name%></h2>
-     <%
-=begin%>
- <%if welcome_path? %>   
-<%
-=end%>
-     <%= link_to  "Hmoe Page", welcome_path %> | 
+     <h2> Welcome <%= current_artist.first_name%></h2>  
 
-     <%= link_to  "Change Password", edit_artist_registration_path %> |
-      <%= link_to  "Sign Out", destroy_artist_session_path, method: :delete%> 
+     <%= link_to  "Hmoe Page", welcome_path, class:"white-color" %> | 
+    
+     <%= link_to  "Change Password", edit_artist_registration_path, class:"white-color" %> |
+      <%= link_to  "Sign Out", destroy_artist_session_path, method: :delete, class:"white-color"%> 
      
-     <%else %>  
-      <%= link_to  "Sign Up", new_artist_registration_path %>| 
-      <%= link_to  "Sign In", new_artist_session_path %> 
+     <%else %> 
+     
+      <%= link_to  "Sign Up", new_artist_registration_path, class:"white-color" %>| 
+      <%= link_to  "Sign In", new_artist_session_path, class:"white-color" %> 
       <%end%> 
       <div >
       <p class="notice no-space"><%= notice %></p>
